--- a/css/Porfolio2-style.css
+++ b/css/Porfolio2-style.css
@@ -8,7 +8,6 @@ html {
 	background-color: black;
 }
 
-
 .logo {
 	position: relative;
 	width: 30px;
@@ -16,7 +15,7 @@ html {
 	background-color: #FAF8CA;
 	border-radius: 50%;
 	background-color: #FAF8CA;
-	margin-top: 20px;
+	margin-top: 10px;
 
 }
 
@@ -28,8 +27,12 @@ html {
 	margin-left: 45px;
 	margin-right: 45px;
 	font-family: 'Inter', sans-serif;
-	font-size: 21px;
-	margin-top: 20px;
+	font-size: 19px;
+	/* margin-top: 10px; */
+}
+
+.p {
+	color: white;
 }
 
 nav ul {
@@ -47,15 +50,76 @@ nav a {
 	text-decoration: none;
 }
 
+.highlight-info {
+	color: #FAF8CA;
+}
+
+.work {
+	color: #FAF8CA;
+}
+
 nav a:hover {
 	text-decoration: underline;
 	text-decoration-color: #FAF8CA;
 }
 
+.column-wrapper {
+	display: flex;
+	color: white;
+	margin-top: 50px;
+	font-weight: lighter;
+	border-bottom: 0px none #000;
+	font-family: 'Inter', sans-serif;
+	color: #f0f0f0;
+	font-size: 20px;
+	line-height: 31px;
+	font-weight: 300;
+	text-align: left;
+	text-decoration: none;
+	margin-bottom: 120px;
+}
+
+/* .p {
+	font-weight: lighter;
+	border-bottom: 0px none #000;
+    background-color: transparent;
+    font-family: Inter, sans-serif;
+    color: #f0f0f0;
+    font-size: 20px;
+    line-height: 31px;
+    font-weight: 300;
+    text-align: left;
+    text-decoration: none
+} */
+
+.column-1 {
+	flex-basis: 40%;
+	font-size: 30px;
+	margin-left: 45px;
+	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+}
+
+.column-2 {
+	flex-basis: 60%;
+	font-size: 20px;
+	margin-right: 45px;
+	font-family: 'Inter', sans-serif;
+	margin-top: 20px;
+}
+
+.underlined {
+	text-decoration: none;
+	border-bottom: 2px solid #FAF8CA;
+	color: white;
+}
+
+.underlined:hover {
+	color: #FAF8CA;
+}
 
 footer {
-	background-color: #333;
-	color: #fff;
+	background-color: black;
 	padding: 20px;
 	display: flex;
 	justify-content: space-between;
@@ -74,12 +138,49 @@ footer {
 	color: #FAF8CA;
 	width: 30px;
 	height: 30px;
+
 }
 
 .derechos-reservados {
 	text-align: right;
-	font-size: 14px;
+	font-size: 18px;
 	font-family: 'Inter', sans-serif;
-	margin-right: 30px;
+	margin-right: 10px;
+	color: white;
+	font-weight: lighter;
 
+}
+
+.fa-linkedin {
+	font-size: 26px;
+	transition: transform 0.5s ease-in-out;
+}
+
+.fa-linkedin:hover {
+	transform: translateY(-15px);
+}
+
+.fa-medium {
+	font-size: 26px;
+	transition: transform 0.5s ease-in-out;
+}
+
+.fa-medium:hover {
+	transform: translateY(-15px);
+}
+
+.fa-behance {
+	font-size: 26px;
+	transition: transform 0.5s ease-in-out;
+}
+
+.fa-behance:hover {
+	transform: translateY(-15px);
+}
+
+.test-flex {
+	display: flex;
+	justify-content: space-between;
+	margin: 0 45px;
+	align-items: center;
 }
