--- a/css/porfolio-style.css
+++ b/css/porfolio-style.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap");
+@import url('https://fonts.cdnfonts.com/css/d-din');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 
 html {
 	background-color: black;
@@ -15,7 +17,7 @@ html {
 	background-color: #FAF8CA;
 	border-radius: 50%;
 	background-color: #FAF8CA;
-	margin-top: 20px;
+	margin-top: 10px;
 
 }
 
@@ -27,8 +29,8 @@ html {
 	margin-left: 45px;
 	margin-right: 45px;
 	font-family: 'Inter', sans-serif;
-	font-size: 21px;
-	margin-top: 20px;
+	font-size: 19px;
+	/* margin-top: 10px; */
 }
 
 nav ul {
@@ -46,58 +48,115 @@ nav a {
 	text-decoration: none;
 }
 
+.highlight {
+	color: #FAF8CA;
+}
+
+.work {
+	color: #FAF8CA;
+}
+
 nav a:hover {
 	text-decoration: underline;
 	text-decoration-color: #FAF8CA;
 }
 
+.test-flex {
+	margin-top: 40px;
+}
 
-.texto-header h1 {
+.flex-container-video {
+	margin-top: 40px;
+}
+
+.p {
+	color: white;
+}
+
+.ClaraCarreira {
+	color: white;
+	font-size: 50px;
+	font-family: 'Cormorant Garamond', serif;
+	;
+	/* margin-top: 90px; */
+	margin-left: 5px;
+	/* margin-bottom: -30px; */
+	/* margin-right: 400px; */
+}
+
+.Clara {
+	border-bottom-style: solid;
+	border-bottom-color: #FAF8CA;
+}
+
+.ClaraCarreira2 {
 	color: white;
 	font-size: 50px;
 	font-family: 'Cormorant Garamond', serif;
 	margin-top: 60px;
-	margin-left: 45px;
-	margin-right: 400px;
+	margin-left: 5px;
+
+
 }
 
-.texto-header h2 {
+.h2 {
 	color: #FAF8CA;
 	text-transform: uppercase;
 	font-size: 20px;
 	font-family: 'Inter', sans-serif;
-	margin-top: -30px;
-	margin-left: 45px;
+	margin-top: -40px;
+	margin-left: 5px;
 	margin-bottom: 30px;
+
 }
 
 
-.container-texto-sobremi {
+/* .container-texto-sobremi {
 	color: white;
 	font-size: 16px;
 	font-family: 'Inter', sans-serif;
 	margin-left: 20px;
 	margin-right: 20px;
-
-}
+} */
 
 .current {
 	float: left;
 	font-size: 14px;
 	font-family: 'Inter', sans-serif;
-	margin-left: 25px;
-	margin-top: 30px;
-	margin-bottom: 150px;
-	margin-right: 70px;
-
+	margin-left: 49px;
+	margin-top: 50px;
+	margin-bottom: 120px;
+	/* margin-right: 70px; */
+	color: white;
 }
 
 .BC {
 	float: right;
-	margin-left: 24px;
+	margin-left: 40px;
 	font-size: 14px;
 	font-family: 'Inter', sans-serif;
-	margin-top: 30px;
+	margin-top: 50px;
+	color: white;
+}
+
+.underlined {
+	text-decoration: none;
+	color: #FAF8CA;
+}
+
+.underlined:hover {
+	color: #e5e5d7;
+	border-bottom: 1px solid #FAF8CA;
+}
+
+.flex-container-video {
+	color: wheat;
+}
+
+.video-memoji {
+	width: 15%;
+	height: 20%;
+	margin-right: 120px;
 }
 
 .atrevia {
@@ -130,7 +189,7 @@ nav a:hover {
 img {
 	float: left;
 	/* margin-right: 20px; */
-	height: auto;
+	height: 416.56px;
 }
 
 .texto-imagen {
@@ -146,7 +205,7 @@ img {
 }
 
 .BC {
-	margin-left: 20px;
+	margin-left: 60px;
 }
 
 .articles-container {
@@ -156,18 +215,98 @@ img {
 	font-size: 16px;
 	margin-left: 30px;
 	margin-right: 30px;
+	margin-bottom: 30px;
+	color: white;
+	font-family: 'Inter', sans-serif;
 
 }
 
 .imagen-mua {
 	margin-top: -70px;
+	transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+
+.articles-container article:hover .imagen-mua {
+	transform: translateY(-15px);
+	opacity: 0.3;
 }
 
 .imagen-izquierda {
 	margin-top: 20px;
+	transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.imagen-gameness {
+	margin-top: 20px;
+	height: 418.16px;
+	width: 597.05px;
+	transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.articles-container article:hover .imagen-gameness {
+	transform: translateY(-15px);
+	opacity: 0.3;
+}
+
+.articles-container article:hover .imagen-izquierda {
+	transform: translateY(-15px);
+	opacity: 0.3;
+}
+
+.articles-container article .texto-hover-arriba {
+	position: absolute;
+	/* Añade posición absoluta */
+	top: 40%;
+	/* Posiciona verticalmente */
+	left: 50%;
+	/* Posiciona horizontalmente */
+	transform: translate(-50%, -50%);
+	/* Centra el elemento */
+	color: #FAF8CA;
+	font-size: x-large;
+	opacity: 0;
+	/* Oculta el elemento */
+	transition: opacity 0.5s ease-in-out;
+	/* Añade transición de opacidad */
+}
+
+.articles-container article:hover .texto-hover-arriba {
+	opacity: 1;
+
+}
+
+.articles-container article .texto-hover {
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #FAF8CA;
+	font-size: x-large;
+	opacity: 0;
+	transition: opacity 0.5s ease-in-out;
+
+}
+
+.articles-container article:hover .texto-hover {
+	opacity: 1;
+}
+
+
+
+.thenonboudariesoflove {
+	float: left;
+
+	height: 418.16px;
+	transition: transform 0.2s ease-in-out;
+}
+
+.thenonboudariesoflove:hover {
+	transform: translate(5px, -5px);
 }
 
 .articles-container article {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	width: calc(45% - 10px);
@@ -182,4 +321,77 @@ img {
 
 .p-gameness:hover {
 	text-decoration-color: #FAF8CA;
+}
+
+
+
+.texto-hover-arriba {
+	font-family: 'Inter', sans-serif;
+}
+
+footer {
+	background-color: black;
+	padding: 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-size: 14px;
+	align-items: bottom;
+}
+
+.redes-sociales {
+	display: flex;
+
+}
+
+.redes-sociales a {
+	margin-right: 10px;
+	color: #FAF8CA;
+	width: 30px;
+	height: 30px;
+
+}
+
+.derechos-reservados {
+	text-align: right;
+	font-size: 18px;
+	font-family: 'Inter', sans-serif;
+	margin-right: 10px;
+	color: white;
+	font-weight: lighter;
+
+}
+
+.fa-linkedin {
+	font-size: 26px;
+	transition: transform 0.5s ease-in-out;
+}
+
+.fa-linkedin:hover {
+	transform: translateY(-15px);
+}
+
+.fa-medium {
+	font-size: 26px;
+	transition: transform 0.5s ease-in-out;
+}
+
+.fa-medium:hover {
+	transform: translateY(-15px);
+}
+
+.fa-behance {
+	font-size: 26px;
+	transition: transform 0.5s ease-in-out;
+}
+
+.fa-behance:hover {
+	transform: translateY(-15px);
+}
+
+.test-flex {
+	display: flex;
+	justify-content: space-between;
+	margin: 0 45px;
+	align-items: center;
 }
